--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,12 +10,15 @@ python-telegram-bot = "^13.4.1"
 python-dotenv = "^0.17.0"
 selenium = "^3.141.0"
 webdriver-manager = "^3.4.0"
+SQLAlchemy = "^1.4.11"
+alembic = "^1.5.8"
+
+[tool.poetry.dev-dependencies]
 black = "^20.8b1"
 isort = "^5.8.0"
 flake8 = "^3.9.1"
-
-[tool.poetry.dev-dependencies]
-pytest = "^5.2"
+pytest = "^6.2.3"
+pytest-cov = "^2.11.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
