--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ selenium = "^3.141.0"
 webdriver-manager = "^3.4.0"
 SQLAlchemy = "^1.4.11"
 alembic = "^1.5.8"
+Cerberus = "^1.3.3"
+psycopg2 = "^2.8.6"
 
 [tool.poetry.dev-dependencies]
 black = "^20.8b1"
