--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -5,11 +5,15 @@ on:
     branches: [main]
     paths:
       - ".github/workflows/lint.yml"
+      - "lint.sh"
+      - "lint_fix.sh"
       - "**/*.py"
   pull_request:
     branches: [main]
     paths:
       - ".github/workflows/lint.yml"
+      - "lint.sh"
+      - "lint_fix.sh"
       - "**/*.py"
 
 jobs:
