--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -24,28 +24,42 @@ jobs:
         python-version: [3.9]
         poetry-version: [1.1.6]
         os: [ubuntu-latest]
+        bootstrap-args: "--git https://github.com/python-poetry/poetry.git"
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
+
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Run image
-        uses: abatilo/actions-poetry@v2.0.0
-        with:
-          poetry-version: ${{ matrix.poetry-version }}
+
+      - name: Get full Python version
+        id: full-python-version
+        run: echo ::set-output name=version::$(python -c "import sys; print('-'.join(str(v) for v in sys.version_info))")
+
+      - name: Bootstrap poetry
+        run: |
+          curl -sL https://raw.githubusercontent.com/python-poetry/poetry/master/install-poetry.py \
+            | python - -y ${{ matrix.bootstrap-args }}
+
       - name: Configure poetry
         run: poetry config virtualenvs.in-project true
+
       - name: Set up cache
         uses: actions/cache@v2
+        id: cache
         with:
           path: .venv
-          key: venv-${{ runner.os }}-${{ hashFiles('**/poetry.lock') }}
+          key: venv-${{ runner.os }}-${{ steps.full-python-version.outputs.version }}-${{ hashFiles('**/poetry.lock') }}
+
       - name: Ensure cache is healthy
         if: steps.cache.outputs.cache-hit == 'true'
         run: timeout 10s poetry run pip --version || rm -rf .venv
+
       - name: Install dependencies
         shell: bash
         run: poetry install
+
       - name: Lint files
         run: ./lint.sh
