--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -24,7 +24,6 @@ jobs:
         python-version: [3.9]
         poetry-version: [1.1.6]
         os: [ubuntu-latest]
-        bootstrap-args: "--git https://github.com/python-poetry/poetry.git"
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v2
@@ -41,7 +40,7 @@ jobs:
       - name: Bootstrap poetry
         run: |
           curl -sL https://raw.githubusercontent.com/python-poetry/poetry/master/install-poetry.py \
-            | python - -y ${{ matrix.bootstrap-args }}
+            | python - -y --git https://github.com/python-poetry/poetry.git
 
       - name: Configure poetry
         run: poetry config virtualenvs.in-project true
