--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -61,4 +61,11 @@ jobs:
         run: poetry install
 
       - name: Lint files
-        run: ./lint.sh
+        run: |
+          poetry run black --check .
+          poetry run isort --diff --check-only .
+          poetry run flake8 --select=F
+          mv requirements.txt requirements2.txt
+          poetry export --without-hashes -f requirements.txt  > requirements.txt
+          diff requirements.txt requirements2.txt || (mv requirements2.txt requirements.txt; false)
+          mv requirements2.txt requirements.txt
