fix: revert lint.yml to use the script again

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -61,11 +61,4 @@ jobs:
         run: poetry install
 
       - name: Lint files
-        run: |
-          poetry run black --check .
-          poetry run isort --diff --check-only .
-          poetry run flake8 --select=F
-          mv requirements.txt requirements2.txt
-          poetry export --without-hashes -f requirements.txt  > requirements.txt
-          diff requirements.txt requirements2.txt || (mv requirements2.txt requirements.txt; false)
-          mv requirements2.txt requirements.txt
+        run: ./lint.sh
