fix: fix lint script and action

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -61,4 +61,7 @@ jobs:
         run: poetry install
 
       - name: Lint files
-        run: ./lint.sh
+        run: |
+          poetry run black --check .
+          poetry run isort --diff --check-only .
+          poetry run flake8 --select=F
