fix: fix postgresql backup scripts and config

--- a/.github/backup/pg_backup.config
+++ b/.github/backup/pg_backup.config
@@ -1,6 +1,6 @@
 # Optional hostname to adhere to pg_hba policies. Will default to "localhost" if none specified.
 HOSTNAME=
 # Optional username to connect to database as. Will default to "postgres" if none specified.
-USERNAME=
+USERNAME=coding_questions_bot
 
 DATABASE_WHITELIST="coding_questions_bot"
