--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -68,8 +68,8 @@ jobs:
             git pull
             git reset --hard origin/main
             ${{ secrets.POETRY_PATH }} install
-            chmod +x ./.github/backup/pg_backup.sh
-            ./.github/backup/pg_backup.sh ${{ secrets.REMOTE_DIR }}
+            chmod +x ./backups/pg_backup.sh
+            ./backups/pg_backup.sh ${{ secrets.REMOTE_DIR }}
             env MANUAL_PATH=1 ./run_migrations.sh ${{ secrets.POETRY_PATH }}
             pm2 restart coding-questions-bot
             echo =========== Deployment Completed ===========
