--- a/.isort.cfg
+++ b/.isort.cfg
@@ -1,6 +1,6 @@
 [settings]
-profile=black
-multi_line_output=3
-include_trailing_comma=True
-line_length=88
-skip=env,venv,.env,.venv
+profile = black
+multi_line_output = 3
+include_trailing_comma = True
+line_length = 88
+skip = env,venv,.env,.venv
