--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,11 +16,13 @@ Cerberus = "^1.3.3"
 psycopg2 = "^2.8.6"
 
 [tool.poetry.dev-dependencies]
-black = "^20.8b1"
+black = "^21.4b2"
 isort = "^5.8.0"
 flake8 = "^3.9.1"
 pytest = "^6.2.3"
 pytest-cov = "^2.11.1"
+mypy = "^0.812"
+sqlalchemy-stubs = "^0.4"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
