--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ SQLAlchemy = "^1.4.40"
 alembic = "^1.8.1"
 Cerberus = "^1.3.4"
 psycopg2 = "^2.9.3"
+pytz = "^2022.2.1"
 
 [tool.poetry.dev-dependencies]
 black = "^22.6.0"
@@ -23,6 +24,7 @@ pytest = "^7.1.2"
 pytest-cov = "^3.0.0"
 mypy = "^0.971"
 sqlalchemy-stubs = "^0.4"
+types-pytz = "^2022.1.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
