--- a/requirements.txt
+++ b/requirements.txt
@@ -22,7 +22,7 @@ pysocks==1.7.1; python_version >= "3.7" and python_full_version < "3.0.0" and py
 python-dotenv==0.20.0; python_version >= "3.5"
 python-telegram-bot==13.13; python_version >= "3.7"
 pytz-deprecation-shim==0.1.0.post0; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.7"
-pytz==2022.2.1; python_version >= "3.7"
+pytz==2022.2.1
 requests==2.28.1; python_version >= "3.7" and python_version < "4"
 selenium==4.4.0; python_version >= "3.7" and python_version < "4.0"
 six==1.16.0; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.7"
