--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["Hanming Zhu <hanming@huawen.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.10"
-python-telegram-bot = "^13.13"
+python-telegram-bot = "^20.0a2"
 python-dotenv = "^0.20.0"
 selenium = "^4.4.0"
 webdriver-manager = "^3.8.3"
