--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 alembic==1.8.1; python_version >= "3.7"
-apscheduler==3.6.3; python_version >= "3.7"
+anyio==3.6.1; python_full_version >= "3.6.2" and python_version >= "3.7"
+apscheduler==3.9.1; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version < "4" and python_version >= "3.7"
 async-generator==1.10; python_version >= "3.7" and python_version < "4.0"
 attrs==22.1.0; python_version >= "3.7" and python_version < "4.0"
-cachetools==4.2.2; python_version >= "3.7" and python_version < "4.0"
+cachetools==5.2.0; python_version >= "3.7" and python_version < "4.0"
 cerberus==1.3.4; python_version >= "2.7"
 certifi==2022.6.15; python_version >= "3.7" and python_full_version < "3.0.0" and python_version < "4.0" or python_full_version >= "3.6.0" and python_version < "4" and python_version >= "3.7"
 cffi==1.15.1; os_name == "nt" and implementation_name != "pypy" and python_version >= "3.7" and python_version < "4.0" and (python_version >= "3.7" and python_full_version < "3.0.0" and python_version < "4.0" or python_full_version >= "3.6.0" and python_version < "4" and python_version >= "3.7")
@@ -10,8 +11,10 @@ charset-normalizer==2.1.0; python_version >= "3.7" and python_version < "4" and 
 colorama==0.4.5; python_version >= "3.7" and python_full_version < "3.0.0" and platform_system == "Windows" or python_full_version >= "3.5.0" and python_version >= "3.7" and platform_system == "Windows"
 cryptography==37.0.4; python_version >= "3.7" and python_full_version < "3.0.0" and python_version < "4.0" or python_full_version >= "3.6.0" and python_version < "4" and python_version >= "3.7"
 greenlet==1.1.2; python_version >= "3" and python_full_version < "3.0.0" and (platform_machine == "aarch64" or platform_machine == "ppc64le" or platform_machine == "x86_64" or platform_machine == "amd64" or platform_machine == "AMD64" or platform_machine == "win32" or platform_machine == "WIN32") and (python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0") and (python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.7") or python_version >= "3" and (platform_machine == "aarch64" or platform_machine == "ppc64le" or platform_machine == "x86_64" or platform_machine == "amd64" or platform_machine == "AMD64" or platform_machine == "win32" or platform_machine == "WIN32") and (python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0") and python_full_version >= "3.5.0" and (python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.7")
-h11==0.13.0; python_version >= "3.7" and python_version < "4.0" and python_full_version >= "3.7.0"
-idna==3.3; python_version >= "3.7" and python_version < "4.0" and (python_version >= "3.7" and python_full_version < "3.0.0" and python_version < "4.0" or python_full_version >= "3.6.0" and python_version < "4" and python_version >= "3.7")
+h11==0.12.0; python_version >= "3.7" and python_version < "4.0" and python_full_version >= "3.7.0"
+httpcore==0.15.0; python_version >= "3.7"
+httpx==0.23.0; python_version >= "3.7"
+idna==3.3; python_version >= "3.7" and python_version < "4.0" and (python_version >= "3.7" and python_full_version < "3.0.0" and python_version < "4.0" or python_full_version >= "3.6.0" and python_version < "4" and python_version >= "3.7") and python_full_version >= "3.6.2"
 mako==1.2.1; python_version >= "3.7"
 markupsafe==2.1.1; python_version >= "3.7"
 outcome==1.2.0; python_version >= "3.7" and python_version < "4.0"
@@ -20,21 +23,22 @@ pycparser==2.21; python_version >= "3.7" and python_full_version < "3.0.0" and o
 pyopenssl==22.0.0; python_version >= "3.7" and python_full_version < "3.0.0" and python_version < "4.0" or python_full_version >= "3.6.0" and python_version < "4" and python_version >= "3.7"
 pysocks==1.7.1; python_version >= "3.7" and python_full_version < "3.0.0" and python_version < "4.0" or python_full_version >= "3.6.0" and python_version < "4" and python_version >= "3.7"
 python-dotenv==0.20.0; python_version >= "3.5"
-python-telegram-bot==13.13; python_version >= "3.7"
-pytz-deprecation-shim==0.1.0.post0; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.7"
+python-telegram-bot==20.0a2; python_version >= "3.7"
+pytz-deprecation-shim==0.1.0.post0; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version < "4" and python_version >= "3.7"
 pytz==2022.2.1
 requests==2.28.1; python_version >= "3.7" and python_version < "4"
+rfc3986==1.5.0; python_version >= "3.7"
 selenium==4.4.0; python_version >= "3.7" and python_version < "4.0"
-six==1.16.0; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.7"
-sniffio==1.2.0; python_version >= "3.7" and python_version < "4.0"
+six==1.16.0; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version < "4" and python_version >= "3.7"
+sniffio==1.2.0; python_version >= "3.7" and python_version < "4.0" and python_full_version >= "3.6.2"
 sortedcontainers==2.4.0; python_version >= "3.7" and python_version < "4.0"
 sqlalchemy==1.4.40; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.6.0")
 tornado==6.2; python_version >= "3.7"
 tqdm==4.64.0; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.7"
 trio-websocket==0.9.2; python_version >= "3.7" and python_version < "4.0"
 trio==0.21.0; python_version >= "3.7" and python_version < "4.0"
-tzdata==2022.2; platform_system == "Windows" and python_version >= "3.7" and (python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.7")
-tzlocal==4.2; python_version >= "3.7"
+tzdata==2022.2; python_version >= "3.7" and python_full_version < "3.0.0" and platform_system == "Windows" or python_full_version >= "3.6.0" and python_version < "4" and python_version >= "3.7" and platform_system == "Windows"
+tzlocal==4.2; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version < "4" and python_version >= "3.7"
 urllib3==1.26.11; python_version >= "3.7" and python_full_version < "3.0.0" and python_version < "4.0" or python_full_version >= "3.6.0" and python_version < "4" and python_version >= "3.7"
 webdriver-manager==3.8.3; python_version >= "3.7"
 wsproto==1.1.0; python_version >= "3.7" and python_version < "4.0" and python_full_version >= "3.7.0"
