--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ alembic = "^1.8.1"
 Cerberus = "^1.3.4"
 psycopg2 = "^2.9.3"
 pytz = "^2022.2.1"
+expiringdict = "^1.2.2"
 
 [tool.poetry.dev-dependencies]
 black = "^22.6.0"
