--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -4,13 +4,13 @@ on:
   push:
     branches: [main]
     paths:
-      - ".github/workflows/lint.yml"
-      - "**/*.py"
+      - '.github/workflows/lint.yml'
+      - '**/*.py'
   pull_request:
     branches: [main]
     paths:
-      - ".github/workflows/lint.yml"
-      - "**/*.py"
+      - '.github/workflows/lint.yml'
+      - '**/*.py'
 
 jobs:
   lint:
@@ -18,7 +18,6 @@ jobs:
       fail-fast: false
       matrix:
         python-version: [3.10]
-        poetry-version: [1.1.6]
         os: [ubuntu-latest]
     runs-on: ${{ matrix.os }}
     steps:
@@ -57,4 +56,4 @@ jobs:
         run: poetry install
 
       - name: Lint files
-        run: ./lint.sh
+        run: make lint
