--- a/.gitignore
+++ b/.gitignore
@@ -145,3 +145,6 @@ cython_debug/
 backups/pg_backup.config
 backups/*.sql
 backups/*.sql.in_progress
+
+# Python Telegram Bot Pickle Persistence
+/persistence
